gccida/c2/get_last_value_validate
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_last_value_validate/src/combine.c:11923:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_last_value_validate/src/combine.c:11994:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v9 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v10] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_last_value_validate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/get_last_value_validate/src/obj/combine.o] Error 1
